# ibkr-mcp-server

./: .env.example  LICENSE  README.md  pyproject.toml
docs/: setup.md
ibkr_mcp/: __init__.py  broker.py  config.py  server.py
ibkr_mcp/prompts/: templates.py
ibkr_mcp/resources/: account.py
ibkr_mcp/tools/: account.py  analysis.py  market.py  trading.py
tests/: conftest.py  test_resources.py  test_tools.py
