[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ibkr-mcp-server"
version = "0.1.0"
description = "MCP server for Interactive Brokers — portfolio data, trading, and analysis for international/EU investors"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.9",
    "ib-async>=1.0.3",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
]

[project.scripts]
ibkr-mcp = "ibkr_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["ibkr_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.25",
]
